fixed loading label style on mobile menu expanded state

--- a/src/components/Menu/MenuMobile/MenuMobileExpandedMenu/styles.module.css
+++ b/src/components/Menu/MenuMobile/MenuMobileExpandedMenu/styles.module.css
@@ -12,3 +12,7 @@
   height: 100%;
   color: white;
 }
+
+.loadingLabel {
+  padding: 16px;
+}
