--- a/src/components/Menu/MenuMobile/styles.module.css
+++ b/src/components/Menu/MenuMobile/styles.module.css
@@ -19,7 +19,3 @@
 .menuItemContainer {
   display: flex;
 }
-
-.loadingLabel {
-  padding: 16px;
-}
